--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,16 @@
 <!doctype html>
 <html>
 <head>
-	<meta charset="utf-8">
-	<title>RotoProsWeb</title>
-	<base href="/">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="icon" type="image/x-icon" href="favicon.ico">
+  <meta charset="utf-8">
+  <meta http-equiv="Content-Type" content="text/html">
+  <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0">
+  <title>RotoProsWeb</title>
+  <base href="/">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans:300,400,600|Roboto+Condensed:400,700|Roboto:300,400,500,700" rel="stylesheet">
 </head>
 <body>
-	<app-root>Loading...</app-root>
+<app-root>Loading...</app-root>
 </body>
 </html>
