--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,27 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans:300,400,600|Roboto+Condensed:400,700|Roboto:300,400,500,700" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css?family=Lato|Open+Sans:300,400,600|Roboto+Condensed:400,700|Roboto:300,400,500,700"
+    rel="stylesheet">
+  <style>
+    .startup-loader {
+      display: flex;
+      position: absolute;
+      align-items: center;
+      justify-content: center;
+      top: 0;
+      right: 0;
+      left: 0;
+      bottom: 0;
+    }
+  </style>
 </head>
 <body>
-<app-root>Loading...</app-root>
+<app-root>
+  <div class="startup-loader">
+    <img src="assets/images/rings.svg" style="width: 80px;height: 80px">
+  </div>
+</app-root>
 </body>
 </html>
