Pagination added Contest screen. User setting screen integrated, testing is remaining. Admin side ( dashboard, members and plans ) integrated. Admin side code and structure optimized, UI is reaming, need new UI.

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,8 @@
   <link
     href="https://fonts.googleapis.com/css?family=Lato|Open+Sans:300,400,600|Roboto+Condensed:400,700|Roboto:300,400,500,700"
     rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="assets/fonts/fontawesome/css/font-awesome.min.css" rel="stylesheet" type="text/css"/>
   <style>
     .startup-loader {
       display: flex;
