Subscription code added. Forum, Article and new links updated, Signup flow tested

--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,7 @@
       bottom: 0;
     }
   </style>
+  <script src="https://checkout.stripe.com/checkout.js"></script>
 </head>
 <body>
 <app-root>
