--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,20 @@
 <!doctype html>
 <html>
 <head>
+
   <meta charset="utf-8">
   <meta http-equiv="Content-Type" content="text/html">
   <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0">
   <title>RotoProsWeb</title>
+
+  <!-- Google Tag Manager -->
+  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-TGWWH6K');</script>
+  <!-- End Google Tag Manager -->
+
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -28,6 +38,12 @@
   <script src="https://checkout.stripe.com/checkout.js"></script>
 </head>
 <body>
+
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TGWWH6K"
+                  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
+
 <app-root>
   <div class="startup-loader">
     <img src="assets/images/rings.svg" style="width: 80px;height: 80px">
