--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta http-equiv="Content-Type" content="text/html">
   <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0">
-  <title>RotoProsWeb</title>
+  <title>RotoPros - Daily Fantasy Sports Expert Advice & Tools</title>
 
   <!-- Google Tag Manager -->
   <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
