--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <meta http-equiv="Content-Type" content="text/html">
   <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0">
+  <meta name="twitter:card" content="summary" />
   <title>RotoPros - Daily Fantasy Sports Expert Advice & Tools</title>
 
   <!-- Facebook Pixel Code -->
