--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,13 @@
   <meta charset="utf-8">
   <meta http-equiv="Content-Type" content="text/html">
   <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0">
+  
   <meta name="twitter:card" content="summary" />
+  <meta name="twitter:site" content="@RotoProsDFS" />
+  <meta name="twitter:title" content="Small Island Developing States Photo Submission" />
+  <meta name="twitter:description" content="View the album on Flickr." />
+  <!--<meta name="twitter:image" content="https://farm6.staticflickr.com/5510/14338202952_93595258ff_z.jpg" />-->
+
   <title>RotoPros - Daily Fantasy Sports Expert Advice & Tools</title>
 
   <!-- Facebook Pixel Code -->
