--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html>
-<head>
+<head id="rotohead">
 
   <meta charset="utf-8">
   <meta http-equiv="Content-Type" content="text/html">
