fb_pixel , social accounts and credit card add updated : wip

--- a/src/index.html
+++ b/src/index.html
@@ -84,6 +84,8 @@
     }
   </style>
   <script src="https://checkout.stripe.com/checkout.js"></script>
+  <!-- <script type="text/javascript" src="https://js.stripe.com/v2/"></script> -->
+  <script src="https://js.stripe.com/v3/"></script>
 </head>
 <body>
 
