--- a/src/index.html
+++ b/src/index.html
@@ -86,6 +86,13 @@
   <script src="https://checkout.stripe.com/checkout.js"></script>
   <!-- <script type="text/javascript" src="https://js.stripe.com/v2/"></script> -->
   <script src="https://js.stripe.com/v3/"></script>
+  <script src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  <script>
+    (adsbygoogle = window.adsbygoogle || []).push({
+      google_ad_client: "ca-pub-3877370878771140",
+      enable_page_level_ads: true
+    });
+  </script>
 </head>
 <body>
 
