integrated twitter widget.

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
 
   <title>RotoPros - Daily Fantasy Sports Expert Advice & Tools</title>
 
+  <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
   <!-- Facebook Pixel Code -->
   <script>
     !function(f,b,e,v,n,t,s)
