--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 
   <meta charset="utf-8">
   <meta http-equiv="Content-Type" content="text/html">
-  <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:site" content="@RotoProsDFS" />
