--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,8 @@
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:site" content="@RotoProsDFS" />
 
+  <meta name="description" content="RotoPros - Daily Fantasy Sports Expert Advice & Tools">
+
   <title>RotoPros - Daily Fantasy Sports Expert Advice & Tools</title>
 
   <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
@@ -103,9 +105,7 @@
 <!-- End Google Tag Manager (noscript) -->
 
 <app-root>
-  <div class="startup-loader">
-    <img src="assets/images/rings.svg" style="width: 80px;height: 80px">
-  </div>
+
 </app-root>
 </body>
 </html>
